图片链接支持修改

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ language: zh-Hans
 timezone: 
 
 # URL
-## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'iA
+url: canbefree.github.io 
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
