--- a/_config.yml
+++ b/_config.yml
@@ -78,3 +78,11 @@ search:
   field: post
   format: html
   limit: 10000
+
+
+# mermaid chart
+mermaid: ## mermaid url https://github.com/knsv/mermaid
+  enable: true  # default true
+  version: "8.9.1" # default v7.1.2
+  options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
+    #startOnload: true  // default true
