--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Canbefree"
 theme = "ananke"
+
+[Params]
+uselatex = true
