--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,11 @@ theme = "LoveIt"
   # LoveIt 主题版本
   version = "0.2.X"
 
+[params.page.toc]
+  enable = true 
+  keepStatic = false
+  auto = true 
+
 [menu]
   [[menu.main]]
     identifier = "posts"
@@ -50,3 +55,6 @@ theme = "LoveIt"
   [markup.highlight]
     # false 是必要的设置 (https://github.com/dillonzq/LoveIt/issues/158)
     noClasses = false
+
+[params.math]
+  enable = true 
